syntax = "proto3";
package sraft;

service Sraft {
    // raft stuff
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);

    // client stuff
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);
}

message AppendEntriesRequest {
    uint64 term = 1;
    uint32 leaderID = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    uint32 candidateID = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}

message LogEntry {
    uint64 term = 1;
    Command command = 2;
}

message Command {
    string key = 1;
    bytes value = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {
    oneof previousValue {
        bytes value = 1;
    }
}